used Files.readAllLines method,writeString method,ordinary concatenation